--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node_modules\\.bin\\webpack-dev-server",
-    "test": ""
+    "test": "",
+    "build" : "node_modules\\.bin\\webpack"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
