--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node_modules\\.bin\\webpack-dev-server",
     "test": "",
-    "build" : "node_modules\\.bin\\webpack"
+    "build": "node_modules\\.bin\\webpack"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +20,11 @@
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "style-loader": "^0.23.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
