--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^15.6.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
